# afni_removeme_eventually

./: @auto_tlrc  CMakeLists.txt  CMakeLists_Plugins.txt  CMakeLists_apps.txt  CMakeLists_libmri.txt  CMakeLists_libs.txt  CMakeLists_plugins.txt  Makefile.INCLUDE  afni_func.c  afni_splash.c  cs_qmed.c  f2c.h  gifti_choice.c  imseq.c  mri_dicom_hdr.c  mri_nstats.c  mrilib.h  suma_gifti.c
R_scripts/: CMakeLists.txt
SUMA/: CMakeLists.txt  SUMA.c  SUMA_3dSkullStrip.c  SUMA_BrainWrap.c  SUMA_BrainWrap.h  SUMA_Makefile_NoDev  SUMA_global.c  SUMA_gts.h  SUMA_gts_insert.c  SUMA_suma.h
avovk/: CMakeLists.txt
coxplot/: CMakeLists.txt  Makefile
debian/: rules
debian/patches/: cmake_sharedlibs-noncmake  debian_paths  series  up-fix_inflate_compare  up_3rd_no_RefreshHTML_AtEvent
eispack/: Makefile
faces/: CMakeLists.txt
gifti/: CMakeLists.txt
niml/: Makefile
poems/: CMakeLists.txt
python_scripts/: CMakeLists.txt
rickr/: CMakeLists.txt  Dimon.c  dimon_afni.c
