PROJECT(R_SCRIPTS)

# script being programs on their own
SET(SCRIPTS
  3dICA.R 3dICC.R 3dLME.R ExamineXmat.R smooth.R)

# everything else that is not meant to be a standalone script
SET(MODULES
  1dGC.R 1dSEMr.R 3dGC.R 3dMEMA.R AFNIio.R)

INSTALL(FILES ${MODULES}
  DESTINATION ${AFNI_INSTALL_SCRIPT_DIR} COMPONENT Runtime
  PERMISSIONS ${FILE_PERMISSIONS})
INSTALL(PROGRAMS ${SCRIPTS}
  DESTINATION ${AFNI_INSTALL_SCRIPT_DIR} COMPONENT Runtime)
